fixed problem when creating a new card, then after closing the previw, the the card is visible in the learn-mode. +  When creating a new box and a new card, then the app shows a message, when the current learn-set is empty.

--- a/Memosport/wwwroot/less/main.less
+++ b/Memosport/wwwroot/less/main.less
@@ -1534,16 +1534,19 @@ MajorSystem edit.ctp
     outline: none;
 }
 
-.software-container {
+.software-container
+{
     position: relative;
     background-color: white;
 
-    .ict-media-container {
+    .ict-media-container
+    {
         width: 100%;
         text-align: center;
 
         .img-mini-container,
-        .ict-audio-box {
+        .ict-audio-box
+        {
             overflow: hidden;
             width: 100px;
             height: 100px;
@@ -1554,27 +1557,28 @@ MajorSystem edit.ctp
             text-align: center;
             display: inline-block;
 
-            span {
+            span
+            {
                 line-height: 100px;
             }
 
-            img {
+            img
+            {
                 max-width: 100%;
                 vertical-align: middle;
             }
         }
     }
 
-
-
-
-    .logout-warning {
+    .logout-warning
+    {
         background-color: #ffff99;
         border: 1px solid #ffcc33;
         margin-bottom: @GlobalMargin / 3;
         padding: 5px;
     }
 
+    div.empty-dataset-container,
     div.no-data-container {
         text-align: center;
 
